Bug 1536477 - When no body is supplied via MAPI, honour default compose format. r=aceman